Bug 888884 - Make :read-write not apply for disabled controls to which readonly applies. r=edgar

Per https://html.spec.whatwg.org/#selector-read-write:

> The :read-write pseudo-class must match any element falling into one
> of the following categories [...]:
>
>   * input elements to which the readonly attribute applies, and that
>     are mutable (i.e. that do not have the readonly attribute
>     specified and that are not disabled)
>
>   * textarea elements that do not have a readonly attribute, and
>     that are not disabled.
>
>   * elements that are editing hosts or editable and are neither
>     input elements nor textarea elements.

This fixes the `:disabled` bits.

This matches Safari behavior and the spec, but not Chrome, which has our
behavior.

Fix the WPT, which had multiple issues, as :read-only is defined to be
just the opposite of :read-write. This will pass as soon as I unprefix
the pseudo-class.

Differential Revision: https://phabricator.services.mozilla.com/D75230